changed file names and added new content

--- a/1_expanding_Cards/index.html
+++ b/1_expanding_Cards/index.html
@@ -5,13 +5,10 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <!-- <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.6.0/css/all.min.css" integrity="sha512-Kc323vGBEqzTmouAECnVceyQqyqdsSiqLQISBL29aUW4U/M7pSPA/gEUZQqv1cwx4OnYxTxve5UMg5GT6L4JJg==" crossorigin="anonymous" referrerpolicy="no-referrer" /> -->
     <link rel="stylesheet" href="style.css">
-    <title>Jaco Durand</title>
+    <title>Expanding cards</title>
 </head>
 <body>
-    <h1>Hello World</h1>
-    
-
-    <h1>Where I've been</h1>
+    <h1>Expanding cards</h1>
 
     <div class="container">
         <div class="panel active" style ="background-image: url('https://a.cdn-hotels.com/gdcs/production85/d1715/475fcc95-21d7-44a7-9d42-4fd6219d9f55.jpg');">
